src/test/resources/purescript_examples/manual/passing/RedefinedFixity.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
            PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PureASTWrapperElement(identifier)
          PsiElement(()('(')
          PsiElement(operator)('$')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('f')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('f')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('a')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(FixityDeclaration)
        PureASTWrapperElement(Fixity)
          PsiElement(infixr)('infixr')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('1000')
          PsiElement(whitespace)(' ')
        PsiElement(operator)('$')
        PsiElement(whitespace)('\n\n')
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M2')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
            PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
            PsiElement(whitespace)('\n\n')
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M3')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
            PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('M1')
            PsiElement(whitespace)('\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('M2')
            PsiElement(whitespace)('\n\n')
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
