src/test/resources/purescript_examples/manual/failing/RequiredHiddenType.purs.psi
FILE
  PsiElement(whitespace)('-- exporting `a` should fail as `A` is hidden\n')
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Foo')
      PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PureASTWrapperElement(PositionedDeclarationRef)
        PsiElement(proper name)('B')
        PsiElement(()('(')
        PsiElement(..)('..')
        PsiElement())(')')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(PositionedDeclarationRef)
        PureASTWrapperElement(ValueRef)
          PsiElement(identifier)('a')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(PositionedDeclarationRef)
        PureASTWrapperElement(ValueRef)
          PsiElement(identifier)('b')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('A')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('A')
        PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('B')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeArgs)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('B')
        PsiElement(whitespace)('\n  \n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Constructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('A')
                PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('b')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Constructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('B')
